Refactor Zencoder related code (prep for ansible)
Squashed commit of the following:

commit d9c6b6ec7fd3566903ec102ea6faba5ea7386a8e
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 15 09:47:11 2014 +0200

    Revert "An another level config file for zencoder"

    This reverts commit fc8c39eb5e0b422b6a42ad5e81ef432e5e1e5101.

commit fc8c39eb5e0b422b6a42ad5e81ef432e5e1e5101
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Aug 13 15:15:53 2014 +0200

    An another level config file for zencoder

commit 9c2e54b1b08ddd33e4446f4cededaf2285e26b15
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Aug 12 15:48:22 2014 +0200

    More zencoder test fixing

commit 283bd0400605f1c0a8bc9c429fa969fa1a8a1095
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Aug 12 15:42:36 2014 +0200

    Set and adjust zencoder config file for testing

commit dc7582200f5608724fd6e2998b29068c0624c29b
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Aug 12 14:40:50 2014 +0200

    Syntax fix

commit 36af299717ba089eec6c8551d403e6c93f2668c6
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Aug 12 14:21:07 2014 +0200

    Cleanup and simplify zencoder configuration

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ config/environments/*.local.yml
 config/secrets.yml
 config/settings.local.yml
 config/dropbox.local.yml
+config/zencoder.local.yml
 config/settings/*.local.yml
 config/sphinx.yml
 config/sphinx.yml.tpo
