Refactor preview mechanism

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,5 +1,1 @@
-dropbox:
-  root_dir: <%= Rails.root.join("tmp").to_s %>
-  server: ftp.dropbox.test
-  user: <%= ENV['USER'] %>
-  password: NOT CONFIGURED!
+use_x_sendfile: false
