Add test for admin "switch-to" feature; fix switch-to
* fix also user-check during sign-in

Squashed commit of the following:

commit 72fa8814e21bdfc419e4cd84b4ab2b0747ff66db
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 22 12:59:42 2014 +0200

    Add test for admin "switch-to" feature

commit ffc6f77400e3e481df188f9e882ffc641d7a1758
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 22 11:06:22 2014 +0200

    Check for user first before checking signature

commit 570edfb56b14d89fa7d039438f4d9f170484c971
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 22 10:40:48 2014 +0200

    Fix switch_to to use set_madek_session

--- a/cider-ci/tasks/rspec.yml
+++ b/cider-ci/tasks/rspec.yml
@@ -119,6 +119,10 @@
   scripts:
     rspec:
       body: bundle exec rspec "spec/controllers/zencoder_jobs_spec.rb"
+- name: features admin users switch_to
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/features/admin/users/switch_to_spec.rb"
 - name: features batch update_metadata
   scripts:
     rspec:
@@ -128,8 +132,6 @@
     rspec:
       body: bundle exec rspec "spec/features/custom_urls/custom-urls_not-owner_spec.rb"
 - name: features filter_set filter_set
-  eager_trials: 2
-  auto_trials: 6
   scripts:
     rspec:
       body: bundle exec rspec "spec/features/filter_set/filter_set_spec.rb"
