Move newrelic config to template and gitignore it
so ansible will be ok with it

--- a/.gitignore
+++ b/.gitignore
@@ -19,15 +19,16 @@ config/*.conf_with_pipe
 config/LDAP.yml
 config/database.yml
 config/definitions/metadata/ExifTool_config.pl
+config/dropbox.local.yml
 config/environments/*.local.yml
+config/newrelic.yml
 config/secrets.yml
 config/settings.local.yml
-config/dropbox.local.yml
-config/zencoder.local.yml
 config/settings/*.local.yml
 config/sphinx.yml
 config/sphinx.yml.tpo
 config/test.sphinx.conf.tpo
+config/zencoder.local.yml
 coverage/
 db/backups
 db/development_structure.sql
