--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,1 +1,8 @@
 use_x_sendfile: false
+
+release: 
+  version_major: 2
+  version_minor: 0 
+  version_patch: 13
+  version_pre: ""
+  version_build: ""
