--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,9 +2,9 @@ use_x_sendfile: false
 
 release: 
   version_major: 2
-  version_minor: 0 
-  version_patch: 13
-  version_pre: ""
+  version_minor: 1  
+  version_patch: 0
+  version_pre: "-beta.1"
   version_build: ""
 
 zhdk_integration: false
