Set version to 2.2.0-beta.0

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,9 +2,9 @@ use_x_sendfile: false
 
 release: 
   version_major: 2
-  version_minor: 1  
+  version_minor: 2  
   version_patch: 0
-  version_pre: ""
+  version_pre: "-beta.0"
   version_build: ""
 
 zhdk_integration: false
