--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,7 +4,7 @@ release:
   version_major: 2
   version_minor: 2  
   version_patch: 0
-  version_pre: "-beta.1"
+  version_pre: ""
   version_build: ""
 
 zhdk_integration: false
