--- a/cider-ci/partials/attachments.yml
+++ b/cider-ci/partials/attachments.yml
@@ -4,3 +4,9 @@ logs:
 screenshots: 
   glob: 'tmp/capybara/*.png'
   content-type: image/png
+coverage_resultset:
+  glob: 'coverage/.resultset.json'
+  content-type: application/json
+coverage_last_run:
+  glob: 'coverage/.last_run.json'
+  content-type: application/json
