Admin interface: provide FilterSets section
Squashed commit of the following:

commit db6f321726302500da76bccec442f67ce2c7d9ba
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Tue Oct 14 19:16:56 2014 +0200

--- a/cider-ci/tasks/rspec.yml
+++ b/cider-ci/tasks/rspec.yml
@@ -119,6 +119,10 @@
   scripts:
     rspec:
       body: bundle exec rspec "spec/controllers/zencoder_jobs_spec.rb"
+- name: features admin filter_sets removing_filter_set
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/features/admin/filter_sets/removing_filter_set_spec.rb"
 - name: features admin users switch_to
   scripts:
     rspec:
