js: add module to build LDAP tree from flat list (and result)
Squashed commit of the following:

commit dacac3f55ec66db38b39f6d502f2e3af608ffcfa
Author: Max F. Albrecht <1@178.is>
Date:   Thu Oct 16 15:46:32 2014 +0200

    ldap scripts: use new data, remove sanitising, add current tree

commit 6e3d1379566908333494a14c1b895bf5c98d1b87
Author: Max F. Albrecht <1@178.is>
Date:   Tue Oct 14 23:21:35 2014 +0200

    js: add some LDAP tree building functions; nodejs stuff

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ db/schema.rb
 db/sphinx/
 db/test_structure.sql
 deb/seeds.rb
+dev/node_modules/
 doc/api/yard
 log/*.log
 log/searchd.development.pid
