ui: resources: preview: overlay: show parent set also for entries
ported over templates, styles, scripts from sets and made them more general.
also adds a test for the whole overlay feature…

---

Squashed commit of the following:

commit 20d8ad1cdf59991c61770cda66645472e72007de
Author: Max F. Albrecht <1@178.is>
Date:   Tue Oct 21 10:49:13 2014 +0200

    test: add scenario for plain listing of resources

commit dede6ce60c964670293876275cb15d2f2a0840bc
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 17:51:48 2014 +0200

    add a test for old and new overlays

commit 0947095bb6c3f889e5fb520e01bb4f5ad396b030
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 16:08:34 2014 +0200

    sass: fix small visual bug in overlay arrows

    showed a grey line on retina displays, no overlayed with a box-shadow

commit bacf6287eab7a89406e6b2d17f2a2dd18dbab28e
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 14:57:32 2014 +0200

    move and adjust javascript and client templates

commit cce7d90c80edace3436f7d82d035821a3859517b
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 12:25:55 2014 +0200

    move .level-up overlay template from media_sets to media_ressources; use it; fix styles
    (resources container view)

commit 9fed30dd945d7b5e4a56fb268ba1c3a13db10f95
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 12:17:33 2014 +0200

    refactor/simplify styles (grid mode)

commit 6a0e86fe57546a1195a6bb17775ae9609a2a83e3
Author: Max F. Albrecht <1@178.is>
Date:   Mon Oct 20 12:11:30 2014 +0200

    move .level-up overlay template from media_sets to media_ressources; use it; fix styles

--- a/cider-ci/tasks/rspec.yml
+++ b/cider-ci/tasks/rspec.yml
@@ -147,6 +147,10 @@
   scripts:
     rspec:
       body: bundle exec rspec "spec/features/io_mappings/io_mappings_spec.rb"
+- name: features media_resources_index
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/features/media_resources/media_resources_index_spec.rb"
 - name: features meta_data
   scripts:
     rspec:
