Remove support for cider-ci v1; move cider-ci_v2 to cider-ci

--- a/cider-ci/tasks/completeness.yml
+++ b/cider-ci/tasks/completeness.yml
@@ -1,10 +1,20 @@
-- name: All spects are tested?
-  scripts:
-    main: 
-      body: cider-ci/bin/all_specs_tested.rb
+tasks:
 
-- name: All features are tested?
+- name: Check all cucumber-features are tested
   scripts:
     main: 
-      body: cider-ci/bin/all_features_tested.rb 
+      body: cider-ci/bin/check_cucumber-features_tested.rb
+
+- name: Check all respec-features are tested
+  scripts:
+    main: 
+      body: cider-ci/bin/check_rspec-features_tested.rb
+
+- name: Check all remaining rspec specs are tested
+  scripts:
+    main: 
+      body: cider-ci/bin/check_rspec-plain_tested.rb
+
+
+
 
