--- a/cider-ci/tasks/rspec-features.yml
+++ b/cider-ci/tasks/rspec-features.yml
@@ -44,6 +44,10 @@ tasks:
   scripts:
     rspec:
       body: DISPLAY=":$XVNC_PORT" bundle exec rspec "spec/features/media_resources/media_resources_index_spec.rb"
+- name: features media_resources media_resources_relations
+  scripts:
+    rspec:
+      body: DISPLAY=":$XVNC_PORT" bundle exec rspec "spec/features/media_resources/media_resources_relations_spec.rb"
 - name: features meta_data meta_data_institutional_groups
   scripts:
     rspec:
