Refactor and migrate meta_data, step1: MetaDatumString -> MetaDatum::Text
Squashed commit of the following:

commit 35ac56e77b4234137ba4d0cb0afe647556ad2f89
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Nov 17 10:39:53 2014 +0100

    Add MetaDatum::Test and migrate types

commit 96ee877af6e2f50df9e2849819c175ef7e9bce07
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Nov 14 12:27:06 2014 +0100

    MetaDatum::MetaDatumString -> MetaDatum::Text

commit 50da5b777fcead3599c490fff5732a3e6828da8f
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Nov 14 12:06:23 2014 +0100

    Refactor and test MetaDatumString

--- a/cider-ci/tasks/rspec-plain.yml
+++ b/cider-ci/tasks/rspec-plain.yml
@@ -12,6 +12,10 @@ tasks:
   scripts:
     rspec:
       body: bundle exec rspec "spec/models/media_file_spec.rb"
+- name: models meta_datum text
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/meta_datum/text_spec.rb"
 - name: models relations resource_media_entry_arc
   scripts:
     rspec:
