Admin interface: delete groups, merge inst. groups
Admin interface:
- add delete button in groups list
- ability to merge institutional groups

Squashed commit of the following:

commit c094cf96363080950283a10cf8dc15eaac4e8ef0
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Wed Nov 12 13:05:25 2014 +0100

    Admin interface:
    - add delete button in groups list
    - ability to merge institutional groups

--- a/cider-ci/tasks/rspec-features.yml
+++ b/cider-ci/tasks/rspec-features.yml
@@ -4,6 +4,10 @@ tasks:
   scripts:
     rspec:
       body: DISPLAY=":$XVNC_PORT" bundle exec rspec "spec/features/admin/filter_sets/removing_filter_set_spec.rb"
+- name: features admin groups
+  scripts:
+    rspec:
+      body: DISPLAY=":$XVNC_PORT" bundle exec rspec "spec/features/admin/groups_spec.rb"
 - name: features admin users switch_to
   scripts:
     rspec:
