--- a/cider-ci/tasks/rspec-plain.yml
+++ b/cider-ci/tasks/rspec-plain.yml
@@ -44,6 +44,10 @@ tasks:
   scripts:
     rspec:
       body: bundle exec rspec "spec/models/permissions/collection_group_permission_spec.rb"
+- name: models permissions filter_set_api_client_permission
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/permissions/filter_set_api_client_permission_spec.rb"
 - name: models permissions media_entry_api_client_permission
   scripts:
     rspec:
