Add and migrate FilterSetUserPermission
Squashed commit of the following:

commit ba4539b145abacdec2dec0b0c51ce658569a097a
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Dec 1 11:37:26 2014 +0100

    done filter_set_user_permission

commit 1208b14c9a4a780178d85e93718bead4bdbf6ff0
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Dec 1 10:59:25 2014 +0100

    ... migrate ...

--- a/cider-ci/tasks/rspec-plain.yml
+++ b/cider-ci/tasks/rspec-plain.yml
@@ -48,6 +48,10 @@ tasks:
   scripts:
     rspec:
       body: bundle exec rspec "spec/models/permissions/filter_set_api_client_permission_spec.rb"
+- name: models permissions filter_set_user_permission
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/permissions/filter_set_user_permission_spec.rb"
 - name: models permissions media_entry_api_client_permission
   scripts:
     rspec:
