Admin interface: transfer ownership of media sets improvements
Squashed commit of the following:
- add option to remove all permissions of the current owner of the set
- change labelss of action buttons related to changing ownership of a set
- wrap change ownership action with transaction
- possibility to change ownership of set's children media entries with all permissions for former owner
- possibility to change ownership of set's children sets with deleting all permissions for former owner
- summarize all change ownership functionalities on one page

--- a/cider-ci/tasks/rspec-features.yml
+++ b/cider-ci/tasks/rspec-features.yml
@@ -8,6 +8,10 @@ tasks:
   scripts:
     rspec:
       body: DISPLAY=":$XVNC_PORT" bundle exec rspec "spec/features/admin/groups_spec.rb"
+- name: features admin media_sets transfer_ownership
+  scripts:
+    rspec:
+      body: DISPLAY=":$XVNC_PORT" bundle exec rspec "spec/features/admin/media_sets/transfer_ownership_spec.rb"
 - name: features admin users switch_to
   scripts:
     rspec:
