some enhancements to rubocop linting

--- a/cider-ci/tasks/styleguide-conformity.yml
+++ b/cider-ci/tasks/styleguide-conformity.yml
@@ -3,4 +3,4 @@ tasks:
 - name: Lint/Stylecheck with Rubocop
   scripts:
     main:
-      body: bundle exec rubocop -R
+      body: bundle install && bundle exec rubocop -R
