Add MetaDatum::Users model, factory and specs
Squashed commit of the following:

commit e6c68269a8d7f708e7415862e16d1ff4946b449f
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Dec 17 15:12:42 2014 +0100

    Minor fixes

commit 7279f91e02cacae941674a91d5066154865b2e00
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Dec 17 15:05:29 2014 +0100

    spec fix syntax

commit 602f4690f2e39760149a02c7c2612a194b3383ec
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Dec 17 15:03:35 2014 +0100

    introduce meta_datum_users ...

--- a/cider-ci/tasks/rspec-plain.yml
+++ b/cider-ci/tasks/rspec-plain.yml
@@ -52,6 +52,10 @@ tasks:
   scripts:
     rspec:
       body: bundle exec rspec "spec/models/meta_datum/text_spec.rb"
+- name: models meta_datum users
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/meta_datum/users_spec.rb"
 - name: models meta_key immutability
   scripts:
     rspec:
