add HAML-Lint (gem, config file, cider spec)
also

- cider conf: whitespace
- cider conf: add styleguide-conformity_defaults

--- a/cider-ci/tasks/styleguide-conformity.yml
+++ b/cider-ci/tasks/styleguide-conformity.yml
@@ -3,4 +3,9 @@ tasks:
 - name: Lint/Stylecheck with Rubocop
   scripts:
     main:
-      body: bundle install && bundle exec rubocop -R
+      body: bundle exec rubocop -R
+
+- name: Lint/Stylecheck with HAML-Lint
+  scripts:
+    main:
+      body: bundle exec haml-lint app/views/{a*,m*}/* # tmp exclude styleguide…
