rubocop: set RunRailsCops in project-, not CI-config

--- a/cider-ci/tasks/styleguide-conformity.yml
+++ b/cider-ci/tasks/styleguide-conformity.yml
@@ -3,7 +3,7 @@ tasks:
 - name: Lint/Stylecheck with Rubocop
   scripts:
     main:
-      body: bundle exec rubocop -R
+      body: bundle exec rubocop
 
 - name: Lint/Stylecheck with HAML-Lint
   scripts:
