add npm+browserify integration, remove /vendor/js
- gem: browserify-rails w/ config
- enables nodejs-style require('module')
- app.js: use jquery from npm
- small test infra, minimal check in styleguide
- cleanup /vendor, Gemfile
- ci: rails_tasks: do npm install after bundle
- dev: add ./dev/bundle

--- a/.cider-ci/partials/rails_task_defaults.yml
+++ b/.cider-ci/partials/rails_task_defaults.yml
@@ -34,11 +34,10 @@ task_defaults:
 
 
   scripts:
-
-    bundle:
+    dependencies:
       timeout: 500
       order: 1
-      body: bundle
+      body: bundle install && npm install
 
     configer_db:
       order: 2
