--- a/cider-ci/tasks/rspec-plain.yml
+++ b/cider-ci/tasks/rspec-plain.yml
@@ -1,109 +1,9 @@
 ---
 tasks:
-- name: models api_client
+- name: controllers application_controller
   scripts:
     rspec:
-      body: bundle exec rspec "spec/models/api_client_spec.rb"
-- name: models relations resource_media_entry_arc
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/relations/resource_media_entry_arc_spec.rb"
-- name: models media_file
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/media_file_spec.rb"
-- name: models media_entry
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/media_entry_spec.rb"
-- name: models meta_key immutability
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/meta_key/immutability_spec.rb"
-- name: models permissions media_entry_api_client_permission
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/permissions/media_entry_api_client_permission_spec.rb"
-- name: models permissions filter_set_group_permission
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/permissions/filter_set_group_permission_spec.rb"
-- name: models permissions media_entry_group_permission
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/permissions/media_entry_group_permission_spec.rb"
-- name: models permissions filter_set_user_permission
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/permissions/filter_set_user_permission_spec.rb"
-- name: models permissions filter_set_api_client_permission
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/permissions/filter_set_api_client_permission_spec.rb"
-- name: models permissions collection_group_permission
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/permissions/collection_group_permission_spec.rb"
-- name: models permissions collection_user_permission
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/permissions/collection_user_permission_spec.rb"
-- name: models permissions media_entry_user_permission
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/permissions/media_entry_user_permission_spec.rb"
-- name: models permissions collection_api_client_permission
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/permissions/collection_api_client_permission_spec.rb"
-- name: models filter_set
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/filter_set_spec.rb"
-- name: models keyword_term
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/keyword_term_spec.rb"
-- name: models edit_session
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/edit_session_spec.rb"
-- name: models shared favoritable
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/shared/favoritable_spec.rb"
-- name: models shared entrusted_to_user
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/shared/entrusted_to_user_spec.rb"
-- name: models shared destroy_ineffective_permissions
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/shared/destroy_ineffective_permissions_spec.rb"
-- name: models shared edit_sessions
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/shared/edit_sessions_spec.rb"
-- name: models collection
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/collection_spec.rb"
-- name: models meta_datum people
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/meta_datum/people_spec.rb"
-- name: models meta_datum users
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/meta_datum/users_spec.rb"
-- name: models meta_datum text
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/meta_datum/text_spec.rb"
-- name: models keyword class search
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/models/keyword/class/search_spec.rb"
+      body: bundle exec rspec "spec/controllers/application_controller_spec.rb"
 - name: controllers my_controller
   scripts:
     rspec:
@@ -112,7 +12,111 @@ tasks:
   scripts:
     rspec:
       body: bundle exec rspec "spec/controllers/sessions_controller_spec.rb"
-- name: controllers application_controller
+- name: models api_client
   scripts:
     rspec:
-      body: bundle exec rspec "spec/controllers/application_controller_spec.rb"
+      body: bundle exec rspec "spec/models/api_client_spec.rb"
+- name: models collection
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/collection_spec.rb"
+- name: models edit_session
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/edit_session_spec.rb"
+- name: models filter_set
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/filter_set_spec.rb"
+- name: models keyword class search
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/keyword/class/search_spec.rb"
+- name: models keyword_term
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/keyword_term_spec.rb"
+- name: models media_entry
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/media_entry_spec.rb"
+- name: models media_file
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/media_file_spec.rb"
+- name: models meta_datum meta_key_consitency
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/meta_datum/meta_key_consitency_spec.rb"
+- name: models meta_datum people
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/meta_datum/people_spec.rb"
+- name: models meta_datum text
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/meta_datum/text_spec.rb"
+- name: models meta_datum users
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/meta_datum/users_spec.rb"
+- name: models meta_key immutability
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/meta_key/immutability_spec.rb"
+- name: models permissions collection_api_client_permission
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/permissions/collection_api_client_permission_spec.rb"
+- name: models permissions collection_group_permission
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/permissions/collection_group_permission_spec.rb"
+- name: models permissions collection_user_permission
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/permissions/collection_user_permission_spec.rb"
+- name: models permissions filter_set_api_client_permission
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/permissions/filter_set_api_client_permission_spec.rb"
+- name: models permissions filter_set_group_permission
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/permissions/filter_set_group_permission_spec.rb"
+- name: models permissions filter_set_user_permission
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/permissions/filter_set_user_permission_spec.rb"
+- name: models permissions media_entry_api_client_permission
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/permissions/media_entry_api_client_permission_spec.rb"
+- name: models permissions media_entry_group_permission
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/permissions/media_entry_group_permission_spec.rb"
+- name: models permissions media_entry_user_permission
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/permissions/media_entry_user_permission_spec.rb"
+- name: models relations resource_media_entry_arc
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/relations/resource_media_entry_arc_spec.rb"
+- name: models shared destroy_ineffective_permissions
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/shared/destroy_ineffective_permissions_spec.rb"
+- name: models shared edit_sessions
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/shared/edit_sessions_spec.rb"
+- name: models shared entrusted_to_user
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/shared/entrusted_to_user_spec.rb"
+- name: models shared favoritable
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/shared/favoritable_spec.rb"
