--- a/cider-ci/partials/styleguide-conformity_defaults.yml
+++ b/cider-ci/partials/styleguide-conformity_defaults.yml
@@ -10,5 +10,7 @@ task_defaults:
   scripts:
     bundle:
       timeout: 500
-      order: 0
+      order: 1
       body: bundle install
+    main:
+      order: 2
