ci: coverage: output with inline assets (uses forked gem simplecov-htm)
see <https://github.com/eins78/simplecov-html>

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 .yardoc
 /db/data.pgbin
 /db/structure_and_data.pgbin
+/result.json
 Gemfile.local
 Gemfile.local.lock
 app/assets/stylesheets/config/local/
