Add complexity analysis to code-check; remove custom limit from coverage
Squashed commit of the following:

commit 4319a3ced081a6ce76d077f96cc9d2e868dca3ab
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Dec 29 10:17:42 2014 +0100

    Adjust readme, remove low limit from coverage

commit 6d67f33787e4f379e6f89b44596ba7d8642ab01d
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Dec 29 08:25:57 2014 +0100

    Enabled complexity analysis with flay

--- a/cider-ci/coverage_spec.yml
+++ b/cider-ci/coverage_spec.yml
@@ -16,11 +16,10 @@ task_defaults:
       timeout: 500
       order: 2
 
-
 tasks: 
 
 - name: Coverage
   scripts:
     coverage:
-      body: cider-ci_coverage --upload --limit 80
+      body: cider-ci_coverage --upload
 
