Add admin controller, with admin access control; Add basic bootstrap layout to admin

--- a/cider-ci/tasks/rspec-plain.yml
+++ b/cider-ci/tasks/rspec-plain.yml
@@ -124,3 +124,7 @@ tasks:
   scripts:
     rspec:
       body: bundle exec rspec "spec/controllers/application_controller_spec.rb"
+- name: controllers admin dashboard_controller
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/controllers/admin/dashboard_controller_spec.rb"
