Replace the DBhelper with a rails integrated approach "PgDbTasks"

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@
 .rvmrc
 .sass-cache/
 .yardoc
+/db/data.pgbin
+/db/structure_and_data.pgbin
+Gemfile.local
+Gemfile.local.lock
 app/assets/stylesheets/config/local/
 config/*.conf
 config/*.conf_with_pipe
@@ -41,11 +45,9 @@ db/schema.rb
 db/sphinx/
 db/test_structure.sql
 deb/seeds.rb
-dev/node_modules/
 design/icon-font-sources/*.svg
+dev/node_modules/
 doc/api/yard
-Gemfile.local
-Gemfile.local.lock
 log/*.log
 log/searchd.development.pid
 log/searchd.test.pid
