--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,9 +2,9 @@ use_x_sendfile: false
 
 release: 
   version_major: 2
-  version_minor: 7
+  version_minor: 9
   version_patch: 0
-  version_pre: ""
-  version_build: ""
+  version_pre: "beta.0"
+  version_build: NULL
 
 zhdk_integration: false
