styleguide: add test, fix errors
- per-element-screenshots are SHA1 hashed and checked
- deal with hover-effect elements, move mouse to know location
- extract 'living styleguide' builder into module, add a unit test

---

Conflicts:
	app/controllers/styleguide_controller.rb
	cider-ci/tasks/styleguide-conformity.yml
	cider-ci/test_spec.yml
	spec/spec_helper_feature.rb

--- a/cider-ci/tasks/rspec-plain.yml
+++ b/cider-ci/tasks/rspec-plain.yml
@@ -112,6 +112,10 @@ tasks:
   scripts:
     rspec:
       body: bundle exec rspec "spec/models/keyword/class/search_spec.rb"
+- name: modules living styleguide
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/modules/living_styleguide_spec.rb"
 - name: controllers my_controller
   scripts:
     rspec:
