media_entries_controller.rb & filters from dashboard [#85769756 completed]
Squashed commit of the following:

commit 567e9e77de8697f5440b4f1f0e50968065414ab2
Merge: 4de37dd 22af8a9
Author: Matus Kmit <matus.kmit@zhdk.ch>
Date:   Mon Jan 19 17:18:03 2015 +0100

    Merge branch 'madek-v3' into mk_madek-v3_media_entries_controller_85769756

    Conflicts:
    	app/controllers/media_entries_controller.rb
    	config/routes.rb

commit 4de37dd6893288024f1e3003da7a35585acfb4e9
Author: Matus Kmit <matus.kmit@zhdk.ch>
Date:   Mon Jan 19 17:13:11 2015 +0100

    satisfy rubocop

commit f52620096e4bb4622735fa56549af1bb067a9e94
Author: Matus Kmit <matus.kmit@zhdk.ch>
Date:   Mon Jan 19 17:08:59 2015 +0100

    satisfy flog

commit 39b484040e5b53bbfd1e809981260bba8f2f369a
Author: Matus Kmit <matus.kmit@zhdk.ch>
Date:   Mon Jan 19 17:05:05 2015 +0100

    scopes & associations concerns

commit bd1704ad4e1a43802b53cc69390f67887b878070
Author: Matus Kmit <matus.kmit@zhdk.ch>
Date:   Mon Jan 19 15:00:22 2015 +0100

    refactor filters in media_entries_controller.rb

commit b7fb1324e5989f7e6078300a7b592007ce97d375
Author: Matus Kmit <matus.kmit@zhdk.ch>
Date:   Mon Jan 19 13:15:22 2015 +0100

    fix lambda syntax

commit 759579b7e3e7d3ec76920d8c8788c1b2f41c0bb4
Author: Matus Kmit <matus.kmit@zhdk.ch>
Date:   Mon Jan 19 11:09:48 2015 +0100

    fix wrong merge conflict

commit dbe776127adc9bad11ef286d97516e0b31c82189
Author: Matus Kmit <matus.kmit@zhdk.ch>
Date:   Mon Jan 19 09:40:22 2015 +0100

    squash merged in madek-v3
    Conflicts:
    	.gitignore
    	app/controllers/media_entries_controller.rb
    	config/routes.rb
    	db/personas.pgbin
    	spec/models/meta_datum/people_spec.rb
    	spec/models/meta_datum/users_spec.rb
    	spec/spec_helper.rb
    	spec/spec_helper_feature.rb

commit c3703e3a13e3d4915c6376a6eef854953f49319d
Author: Matus Kmit <matus.kmit@zhdk.ch>
Date:   Fri Jan 9 15:45:41 2015 +0100

    squash merge in madek-v3

commit 1abf089c552ad758074274a808e59c10

--- a/cider-ci/tasks/rspec-plain.yml
+++ b/cider-ci/tasks/rspec-plain.yml
@@ -68,10 +68,18 @@ tasks:
   scripts:
     rspec:
       body: bundle exec rspec "spec/models/edit_session_spec.rb"
+- name: models shared in_responsibility_of_user
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/shared/in_responsibility_of_user_spec.rb"
 - name: models shared validates
   scripts:
     rspec:
       body: bundle exec rspec "spec/models/shared/validates_spec.rb"
+- name: models shared created_by_user
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/shared/created_by_user_spec.rb"
 - name: models shared favoritable
   scripts:
     rspec:
@@ -80,6 +88,10 @@ tasks:
   scripts:
     rspec:
       body: bundle exec rspec "spec/models/shared/entrusted_to_user_spec.rb"
+- name: models shared favored_by_user
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/shared/favored_by_user_spec.rb"
 - name: models shared destroy_ineffective_permissions
   scripts:
     rspec:
@@ -124,6 +136,10 @@ tasks:
   scripts:
     rspec:
       body: bundle exec rspec "spec/controllers/sessions_controller_spec.rb"
+- name: controllers media_entries_controller
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/controllers/media_entries_controller_spec.rb"
 - name: controllers application_controller
   scripts:
     rspec:
