Use Cider-CI dotfile and rspec support; restructure Cider-CI dir

--- a/.cider-ci/partials/rails_task_defaults.yml
+++ b/.cider-ci/partials/rails_task_defaults.yml
@@ -24,19 +24,27 @@ task_defaults:
 
 
   scripts:
+
     bundle: 
       timeout: 500
       order: 1
       body: bundle
+
     configer_db:
       order: 2
-      body: cider-ci/bin/create_db_config_file.rb
+      body: .cider-ci/bin/create_db_config_file.rb
+
     setup_database:
       order: 3
       body: bundle exec rake db:reset 
+
     setup_madek:
       order: 4
       body: bundle exec rake madek:setup:dirs 
+
+    main: 
+      order: 6
+
     drop_test_db: 
       order: 8
       type: post_process
