--- a/.cider-ci/partials/rails_integration_task_defaults.yml
+++ b/.cider-ci/partials/rails_integration_task_defaults.yml
@@ -17,9 +17,15 @@ task_defaults:
       max: 5999
 
   scripts: 
+
     startx:
       order: 5
       body: tightvncserver ":$XVNC_PORT"  -geometry 1024x768 -rfbport "$XVNC_PORT"  -interface '127.0.0.1'
+
+    main:
+      order: 6
+      timeout: 300
+
     stopx: 
       order: 9
       type: post_process
